     rate state-of-health channels (see #2678)
   * fix reading data in '16' and '32' encodings, when packets do not use
     the fixed maximum amount of available number of samples per data packet
     (see #2678)
   * properly take into account native system byteorder, should fix reading
     rt130 data on big endian systems (see #2678)
 - obspy.io.xseed:
   * fix a bug reading SEED blockettes 48 and 58 which was likely never
     encountered (see #2668)
 - obspy.signal.array_analysis
   * fixed an issue in array_processing function returning wrong times
     for matplotlib versions >= 3.3 due to the epoch change in matplotlib
     (see #2723)
 - obspy.signal.cross_correlation:
   * Remove deprecated xcorr function, remove deprecated domain keyword
     argument in correlate function (see #1979)
 - obspy.signal.spectral_estimation.PPSD:
   * Added special handling option for infrasound data and global infrasound noise
     models for plotting (see #2740)

maintenance_1.2.x
=================

Changes:
 - obspy.core:
   * Inventory addition now consistently uses shallow copies (#2675, #2694)
 - obspy.clients.seedlink:
   * Fix a bug in basic client when printing debug output (see #2734)
 - obspy.io.gse2:
   * When reading GSE2 bulletins, station magnitudes now include waveform IDs
     and have associated station magnitude contributions (see #2718)

1.2.2 (doi: 10.5281/zenodo.3921997)
===================================

Changes:
 - obspy.core:
   * Fix wrong values in Stats object after deepcopy or pickle of Stats object
     for edge cases (see #2601)
 - obspy.clients.fdsn:
   * EIDA routing client: fix an issue that leaded to a request of *all* EIDA
     data when requesting an invalid, out-of-epochs time window for a valid
     station (see #2611)
   * update RASPISHAKE URL mapping to use https
   * fix a bug of not handling HTTPException in mass_downloader (see #2606)
   * use the client's set timeout in service discovery, too (see #2656)